--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "ai": "^2.2.17",
     "next": "13.5.6",
+    "openai-edge": "^1.2.2",
     "react": "^18",
     "react-dom": "^18"
   },
